# Bin_merge

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cc  main.h
BinMerge/: BinMerge.cc  BinMerge.h  CMakeLists.txt  fileControl.cc  fileControl.h
Qt/: CMakeLists.txt  CustomQTControls.cpp  CustomQTControls.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mergeUi.cpp
include/: type.h
output/: main
src/: BinFormat.cc  BinFormat.h  BinLegacyFormat.cc  BinLegacyFormat.h  main.cc  main.h  makefile.cc  makefile.h  writeLeagcybin.cc  writeLegacybin.h
